obake/tests/ui/bad_helpers.stderr
error: `#[obake(inherit)]` not valid in this context
 --> $DIR/bad_helpers.rs:6:13
  |
6 |     #[obake(inherit)]
  |             ^^^^^^^

error: `#[obake(cfg(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:11:17
   |
11 |     #[obake(cfg("0.1.0"))]
   |                 ^^^^^^^

error: `#[obake(inherit)]` not valid in this context
  --> $DIR/bad_helpers.rs:18:13
   |
18 |     #[obake(inherit)]
   |             ^^^^^^^

error: `#[obake(cfg(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:23:17
   |
23 |     #[obake(cfg("0.1.0"))]
   |                 ^^^^^^^

error: `#[obake(inherit)]` not valid in this context
  --> $DIR/bad_helpers.rs:29:17
   |
29 |         #[obake(inherit)]
   |                 ^^^^^^^

error: `#[obake(derive(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:38:17
   |
38 |         #[obake(derive(Clone))]
   |                 ^^^^^^

error: `#[obake(derive(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:45:17
   |
45 |         #[obake(derive(Clone))]
   |                 ^^^^^^

error: `#[obake(derive(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:53:21
   |
53 |             #[obake(derive(Clone))]
   |                     ^^^^^^

error: `#[obake(serde(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:63:17
   |
63 |         #[obake(serde(skip_serializing))]
   |                 ^^^^^

error: `#[obake(serde(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:70:17
   |
70 |         #[obake(serde(skip_serializing))]
   |                 ^^^^^

error: `#[obake(serde(...))]` not valid in this context
  --> $DIR/bad_helpers.rs:78:21
   |
78 |             #[obake(serde(skip_serializing))]
   |                     ^^^^^
